<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserDetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgUser"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tvFullnameGit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="6dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imgUser"
        app:layout_constraintTop_toTopOf="@id/imgUser"
        app:layout_constraintBottom_toBottomOf="@id/imgUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>

    <ImageView
        android:id="@+id/iconUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_username"
        app:layout_constraintBottom_toBottomOf="@+id/tvUsernameGit"
        app:layout_constraintEnd_toStartOf="@+id/tvUsernameGit"
        app:layout_constraintStart_toEndOf="@+id/imgUser" />

    <TextView
        android:id="@+id/tvUsernameGit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="@id/tvFullnameGit"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="@id/tvFullnameGit"
        app:layout_constraintTop_toBottomOf="@id/tvFullnameGit" />

    <ImageView
        android:id="@+id/iconRepository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_repository"
        app:layout_constraintBottom_toBottomOf="@+id/tvRepositoryGit"
        app:layout_constraintEnd_toStartOf="@+id/tvRepositoryGit"
        app:layout_constraintStart_toEndOf="@+id/imgUser" />

    <TextView
        android:id="@+id/tvRepositoryGit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/repo"
        app:layout_constraintEnd_toEndOf="@id/tvUsernameGit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tvUsernameGit"
        app:layout_constraintTop_toBottomOf="@id/tvUsernameGit" />

    <ImageView
        android:id="@+id/iconCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_company"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/imgUser"
        app:layout_constraintTop_toBottomOf="@id/imgUser"/>

    <TextView
        android:id="@+id/tvCompanyGit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/iconCompany"
        app:layout_constraintTop_toTopOf="@id/iconCompany"
        app:layout_constraintBottom_toBottomOf="@id/iconCompany"/>

    <ImageView
        android:id="@+id/iconLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="@id/iconCompany"
        app:layout_constraintTop_toBottomOf="@id/iconCompany"/>

    <TextView
        android:id="@+id/tvLocationGit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/address"
        app:layout_constraintStart_toEndOf="@id/iconLocation"
        app:layout_constraintTop_toTopOf="@id/iconLocation"
        app:layout_constraintBottom_toBottomOf="@id/iconLocation"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:tabTextColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/iconLocation" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tab"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_favorite_border"

        app:backgroundTint="@color/black"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>